# prompthire-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cleanup-images.yml  deploy.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_cache_and_rate_limit_v2.py
src/app/: main.py
src/app/core/: config.py  deps.py  error_handlers.py  exceptions.py  rate_limit.py
src/app/infrastructure/: database.py  llm.py  prompts.py
src/app/models/: question.py
src/app/models/db/: base.py  generation.py  global_daily_count.py  question_cache.py  rate_limit_bucket.py  rate_limit_daily.py
src/app/prompts/templates/: system_prompt.txt
src/app/repositories/: audit_repository.py  cache_repository.py  rate_limit_repository.py
src/app/routers/: health.py
src/app/routers/v1/: __init__.py  generate.py
src/app/schemas/: generate.py  health.py  llm.py  response.py
src/app/services/: question_service.py
